--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.board-row:after {
+  clear: both;
+  content: '';
+  display: table;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
